--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <script src="index.js"></script>
+
 </head>
 
 <body>
+    <div class="box">1</div>
 
+    <script src="index.js"></script>
 </body>
 
 </html>
