--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-
 </head>
 
 <body>
-    <button>Click me</button>
-
+    <button class="btn">Click me</button>
     <script src="index.js"></script>
 </body>
 
